--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
+    "@vercel/remix": "^2.0.0",
     "framer-motion": "^10.16.4",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
